Name:                vty-ui-builder-tool
Version:             0.1
Synopsis:            vty-ui-builder's source code generation tool
Description:         A command-line tool which uses the library
                     functionality from vty-ui-builder and associated
                     input document readers to generate Haskell source
                     for setting up vty-ui interfaces.
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6

Data-files:
  README

Source-Repository head
  type:     git
  location: https://github.com/jtdaugherty/vty-ui-builder-tool

Library
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Build-Depends:
    vty-ui-builder >= 0.1 && < 0.2
  Exposed-modules:
    Graphics.Vty.Widgets.Builder.Tool

Executable vty-ui-builder
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  Build-Depends:
    filepath >= 1.1 && < 1.2,
    vty-ui >= 1.3 && < 1.4,
    vty-ui-builder >= 0.1 && < 0.2,
    vty-ui-builder-xml >= 0.1 && < 0.2,
    base >= 4 && < 5,
    haskell98
